syntax = "proto3";
package query;

service Query {
     rpc QueryByTag(Tag) returns (TimeSeries);
     rpc QueryByRange(Range) returns (TimeSeries);
}

message Range {
    string schema_id = 1;
    string start = 2;
    string end = 3;
    float step = 4;
}

message Tag {
    string tag_id = 1;
}

message TimeSeries {
    repeated DataPoint datapoints = 1;
}

message DataPoint {
    string timestamp = 1;
    float value = 2;
}
